crates/lang/macro/tests/ui/fail/C-14-payable-constructor.rs
use ink_lang as ink;

#[ink::contract]
mod noop {
    #[ink(storage)]
    pub struct Noop {}

    impl Noop {
        #[ink(constructor, payable)]
        pub fn new() -> Self {
            Self {}
        }
    }
}

fn main() {}
